Move happy emoji to the right to avoid overlapping the door

--- a/style.css
+++ b/style.css
@@ -129,9 +129,9 @@ body {
 /* Happy emoji */
 #happy-emoji {
   position: absolute;
-  left: 50%;
+  right: 5%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
   height: 30%;
   z-index: 10;
   display: none;
